# zirv-config

./: CONDTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cd.yaml
src/: config.rs  lib.rs
