[package]
name = "zirv-config"
version = "0.2.1"
edition = "2024"
authors = ["Jonathan Solskov <josj@zirv.io>"]
description = "An expandable configuration library for Rust backends that aggregates configuration from multiple subsystems and provides a global accessor."
documentation = "https://docs.rs/zirv-config"
repository = "https://github.com/Glubiz/zirv-config"
license = "MIT"
readme = "README.md"
keywords = ["configuration", "env", "backend", "rust"]
categories = ["config", "development-tools", "embedded"]


[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
